--- a/demoForTest/Podfile
+++ b/demoForTest/Podfile
@@ -19,6 +19,6 @@ target 'DemoForTestPod' do
     #    pod 'YDTAdvertising', :path => "/Users/minsol/Desktop/MinsolPrivate/YDTAdvertising"
 #        pod 'YDTAdvertising'
 #        pod 'A8HttpMessage'
-#        pod 'A8CycleScrollView'
+        pod 'A8CycleScrollView'
 
 end
