--- a/demoForTest/Podfile
+++ b/demoForTest/Podfile
@@ -9,6 +9,7 @@ target 'demo' do
     pod 'OpenUDID', '~> 1.0.0'
     pod 'AFNetworking', '~> 3.1.0'
     pod 'SDWebImage', '>= 4.0.0'
+    pod 'GDTMobSDK', '~> 4.8.1' #这里改成你想要的版本号
 end
 
 #这个用于测试本地库和远程库
