--- a/demoForTest/demo/Info.plist
+++ b/demoForTest/demo/Info.plist
@@ -28,6 +28,14 @@
 				<string>RouteDemo</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>WJRouter</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
